dirmngr/ks-engine-hkp.c
@@ -1485,6 +1485,7 @@ ks_hkp_search (ctrl_t ctrl, parsed_uri_t uri, const char *pattern,
   gpg_error_t err;
   KEYDB_SEARCH_DESC desc;
   char fprbuf[2+64+1];
+  char *namebuffer = NULL;
   char *hostport = NULL;
   char *request = NULL;
   estream_t fp = NULL;
@@ -1509,9 +1510,25 @@ ks_hkp_search (ctrl_t ctrl, parsed_uri_t uri, const char *pattern,
     {
     case KEYDB_SEARCH_MODE_EXACT:
     case KEYDB_SEARCH_MODE_SUBSTR:
-    case KEYDB_SEARCH_MODE_MAIL:
     case KEYDB_SEARCH_MODE_MAILSUB:
       pattern = desc.u.name;
+      break;
+    case KEYDB_SEARCH_MODE_MAIL:
+      namebuffer = xtrystrdup (desc.u.name);
+      if (!namebuffer)
+        {
+          err = gpg_error_from_syserror ();
+          goto leave;
+        }
+      /* Strip trailing angle bracket.  */
+      if (namebuffer[0] && namebuffer[1]
+          && namebuffer[strlen (namebuffer)-1] == '>')
+        namebuffer[strlen(namebuffer)-1] = 0;
+      /* Strip optional leading angle bracket.  */
+      if (*namebuffer == '<' && namebuffer[1])
+        pattern = namebuffer + 1;
+      else
+        pattern = namebuffer;
       break;
     case KEYDB_SEARCH_MODE_SHORT_KID:
       snprintf (fprbuf, sizeof fprbuf, "0x%08lX", (ulong)desc.u.kid[1]);
@@ -1616,6 +1633,7 @@ ks_hkp_search (ctrl_t ctrl, parsed_uri_t uri, const char *pattern,
   xfree (request);
   xfree (hostport);
   xfree (httphost);
+  xfree (namebuffer);
   return err;
 }
 
@@ -1631,6 +1649,7 @@ ks_hkp_get (ctrl_t ctrl, parsed_uri_t uri, const char *keyspec, estream_t *r_fp)
   KEYDB_SEARCH_DESC desc;
   char kidbuf[2+64+1];
   const char *exactname = NULL;
+  char *namebuffer = NULL;
   char *searchkey = NULL;
   char *hostport = NULL;
   char *request = NULL;
@@ -1674,6 +1693,24 @@ ks_hkp_get (ctrl_t ctrl, parsed_uri_t uri, const char *keyspec, estream_t *r_fp)
 
     case KEYDB_SEARCH_MODE_EXACT:
       exactname = desc.u.name;
+      break;
+
+    case KEYDB_SEARCH_MODE_MAIL:
+      namebuffer = xtrystrdup (desc.u.name);
+      if (!namebuffer)
+        {
+          err = gpg_error_from_syserror ();
+          goto leave;
+        }
+      /* Strip trailing angle bracket.  */
+      if (namebuffer[0] && namebuffer[1]
+          && namebuffer[strlen (namebuffer)-1] == '>')
+        namebuffer[strlen(namebuffer)-1] = 0;
+      /* Strip optional leading angle bracket.  */
+      if (*namebuffer == '<' && namebuffer[1])
+        exactname = namebuffer + 1;
+      else
+        exactname = namebuffer;
       break;
 
     default:
@@ -1737,6 +1774,7 @@ ks_hkp_get (ctrl_t ctrl, parsed_uri_t uri, const char *keyspec, estream_t *r_fp)
 
  leave:
   es_fclose (fp);
+  xfree (namebuffer);
   xfree (request);
   xfree (hostport);
   xfree (httphost);
